--- a/source/index.html
+++ b/source/index.html
@@ -44,6 +44,58 @@
     </div>
   </div>
 </main>
+
+<footer class="footer">
+  <div class="footer__inner container">
+
+    <a class="footer__logo-link">
+      <svg class="footer__logo-svg" width="70" height="38">
+        <use xlink:href="#icon-logo" x="0" y="0"></use>
+      </svg>
+    </a>
+
+    <nav class="footer__nav">
+      <ul class="footer__nav-list">
+        <li class="footer__nav-item">
+          <a class="footer__nav-link" href="#benefits">Преимущества</a>
+        </li>
+        <li class="footer__nav-item">
+          <a class="footer__nav-link" href="#destinations">Направления</a>
+        </li>
+        <li class="footer__nav-item">
+          <a class="footer__nav-link" href="#cruises">Ближайшие круизы</a>
+        </li>
+        <li class="footer__nav-item">
+          <a class="footer__nav-link" href="#contacts">Контакты</a>
+        </li>
+      </ul>
+    </nav>
+
+    <ul class="footer__social">
+      <li class="footer__social-item">
+        <a class="footer__social-link" href="#" aria-label="Фейсбук">
+          <svg class="footer__social-svg footer__social-svg--facebook" width="11" height="20">
+            <use xlink:href="#icon-fb" x="0" y="0"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="footer__social-item">
+        <a class="footer__social-link" href="#" aria-label="Инстаграм">
+          <svg class="footer__social-svg footer__social-svg--instagram" width="20" height="20">
+            <use xlink:href="#icon-inst" x="0" y="0"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="footer__social-item">
+        <a class="footer__social-link" href="#" aria-label="Твиттер">
+          <svg class="footer__social-svg footer__social-svg--twitter" width="20" height="16">
+            <use xlink:href="#icon-tw" x="0" y="0"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </div>
+</footer>
 <script src="js/menu.js"></script>
 </body>
 </html>
