добавляет блок преимущества

--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
   <header class="header container header--nojs">
     <a class="header__logo-link">
       <svg class="header__logo-svg" width="70" height="38">
-        <use xlink:href="#icon-logo" x="0" y="0"></use>
+        <use xlink:href="#icon-logo"></use>
       </svg>
     </a>
     <nav class="main-nav header__nav">
@@ -65,6 +65,38 @@
       </div>
     </section>
 
+    <section class="benefits">
+      <div class="benefits__wrapper container">
+        <h2>Преимущества</h2>
+
+        <ul class="benefits__list">
+          <li class="benefits__item benefits__item--liner">
+            <svg width="27" height="32">
+              <use xlink:href="#icon-liner"></use>
+            </svg>
+            <h3>Небольшой круизный лайнер</h3>
+            <p>Круизный лайнер, рассчитанный всего лишь на 300 гостей, поможет избежать шума и&#160;очередей и&#160;даст&#160;возможность насладиться видами и&#160;природой.</p>
+          </li>
+          <li class="benefits__item benefits__item--all-inclusive">
+            <svg width="38" height="21">
+              <use xlink:href="#icon-all-inclusive"></use>
+            </svg>
+            <h3>Система все&#160;включено</h3>
+            <p>Все наши круизы работают
+              по&#160;системе “Все Включено”. Великолепные блюда и&#160;безлимитный бар доступны для вас 24&#160;часа.</p>
+          </li>
+          <li class="benefits__item benefits__item--zodiac">
+            <svg width="42" height="15">
+              <use xlink:href="#icon-zodiac"></use>
+            </svg>
+            <h3>Экскурсионные туры на Zodiac</h3>
+            <p>Экскурсионные туры к берегам Антарктиды совершаются на оборудованных лодках типа Zodiac в&#160;сопровождении опытных экскурсоводов.</p>
+          </li>
+        </ul>
+      </div>
+
+    </section>
+
   </main>
 
   <footer class="footer">
@@ -72,7 +104,7 @@
 
       <a class="footer__logo-link">
         <svg class="footer__logo-svg" width="70" height="38">
-          <use xlink:href="#icon-logo" x="0" y="0"></use>
+          <use xlink:href="#icon-logo"></use>
         </svg>
       </a>
 
@@ -97,21 +129,21 @@
         <li class="footer__social-item">
           <a class="footer__social-link" href="#" aria-label="Фейсбук">
             <svg class="footer__social-svg footer__social-svg--facebook" width="11" height="20">
-              <use xlink:href="#icon-fb" x="0" y="0"></use>
+              <use xlink:href="#icon-fb"></use>
             </svg>
           </a>
         </li>
         <li class="footer__social-item">
           <a class="footer__social-link" href="#" aria-label="Инстаграм">
             <svg class="footer__social-svg footer__social-svg--instagram" width="20" height="20">
-              <use xlink:href="#icon-inst" x="0" y="0"></use>
+              <use xlink:href="#icon-inst"></use>
             </svg>
           </a>
         </li>
         <li class="footer__social-item">
           <a class="footer__social-link" href="#" aria-label="Твиттер">
             <svg class="footer__social-svg footer__social-svg--twitter" width="20" height="16">
-              <use xlink:href="#icon-tw" x="0" y="0"></use>
+              <use xlink:href="#icon-tw"></use>
             </svg>
           </a>
         </li>
