--- a/source/index.html
+++ b/source/index.html
@@ -324,7 +324,7 @@
         </div>
         <div class="booking__form-wrapper">
           <form class="form" action="https://echo.htmlacademy.ru" method="post">
-            <h3>Оставьте заявку и&#160;мы&#160;свяжемся с вами в ближайшее время</h3>
+            <h3>Оставьте заявку и&#160;мы&#160;свяжемся с вами в&#160;ближайшее время</h3>
 
             <div class="form__field form__field--text">
               <input type="text" name="user-name" id="user-name" placeholder="Валерия" required>
@@ -349,6 +349,30 @@
             <button type="submit">Оставить заявку</button>
           </form>
         </div>
+      </div>
+    </section>
+
+    <section class="contacts container" id="contacts">
+      <div class="contacts__map-wrapper">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5459706205113!2d30.32275235574415!3d59.93967578993791!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1601463479183!5m2!1sru!2sru" allowfullscreen="" aria-hidden="false" tabindex="0" aria-label="Интерактивная карта"></iframe>
+      </div>
+
+      <div class="contacts__info">
+        <h3>У вас ещё остались вопросы или сомнения? Приезжайте к&#160;нам в&#160;офис и мы вам все расскажем.</h3>
+        <ul class="contacts__list">
+          <li class="contacts__list-item">
+            <svg class="contacts__list-svg" width="18" height="22">
+              <use xlink:href="#icon-mark"></use>
+            </svg>
+            <p>г. Санкт Петербург, ул.&#160;Большая&#160;Конюшенная, 19/8</p>
+          </li>
+          <li class="contacts__list-item">
+            <svg class="contacts__list-svg" width="18" height="18">
+              <use xlink:href="#icon-phone"></use>
+            </svg>
+            <a href="tel:88002000000" aria-label="Номер телефона">8-800-200-00-00</a>
+          </li>
+        </ul>
       </div>
     </section>
   </main>
