переименовывает файл js

--- a/source/index.html
+++ b/source/index.html
@@ -428,6 +428,6 @@
       </ul>
     </div>
   </footer>
-  <script src="js/menu.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
