дополнительная оптимизация изображений

--- a/source/index.html
+++ b/source/index.html
@@ -365,7 +365,7 @@
           <source media="(max-width: 767px)" srcset="img/map-mobile@1x.webp 1x, img/map-mobile@2x.webp 2x" type="image/webp">
 
           <!-- 1х: 560px; 2x: 1120px -->
-          <img src="img/map@1x.jpg" srcset="img/map@2x.jpg 2x" width="560" height="319" alt="Наш адрес на карте">
+          <img src="img/map@1x.jpg" srcset="img/map@2x.jpg 2x" width="560" height="319" loading="lazy" alt="Наш адрес на карте">
         </picture>
       </div>
 
