--- a/source/index.html
+++ b/source/index.html
@@ -75,24 +75,15 @@
 
         <ul class="benefits__list">
           <li class="benefits__item benefits__item--liner">
-            <svg width="27" height="32">
-              <use xlink:href="#icon-liner"></use>
-            </svg>
             <h3>Небольшой круизный лайнер</h3>
             <p>Круизный лайнер, рассчитанный всего лишь на 300 гостей, поможет избежать шума и&#160;очередей и&#160;даст&#160;возможность насладиться видами и&#160;природой.</p>
           </li>
           <li class="benefits__item benefits__item--all-inclusive">
-            <svg width="38" height="21">
-              <use xlink:href="#icon-all-inclusive"></use>
-            </svg>
             <h3>Система все&#160;включено</h3>
             <p>Все наши круизы работают
               по&#160;системе “Все Включено”. Великолепные блюда и&#160;безлимитный бар доступны для вас 24&#160;часа.</p>
           </li>
           <li class="benefits__item benefits__item--zodiac">
-            <svg width="42" height="15">
-              <use xlink:href="#icon-zodiac"></use>
-            </svg>
             <h3>Экскурсионные туры на Zodiac</h3>
             <p>Экскурсионные туры к берегам Антарктиды совершаются на оборудованных лодках типа Zodiac в&#160;сопровождении опытных экскурсоводов.</p>
           </li>
@@ -372,16 +363,10 @@
       <div class="contacts__info">
         <h3>У вас ещё остались вопросы или сомнения? Приезжайте к&#160;нам в&#160;офис и мы вам все расскажем.</h3>
         <ul class="contacts__list">
-          <li class="contacts__list-item">
-            <svg class="contacts__list-svg" width="18" height="22">
-              <use xlink:href="#icon-mark"></use>
-            </svg>
+          <li class="contacts__list-item contacts__list-item--address">
             <address>г. Санкт Петербург, ул.&#160;Большая&#160;Конюшенная, 19/8</address>
           </li>
-          <li class="contacts__list-item">
-            <svg class="contacts__list-svg" width="18" height="18">
-              <use xlink:href="#icon-phone"></use>
-            </svg>
+          <li class="contacts__list-item contacts__list-item--phone">
             <a href="tel:88002000000" aria-label="Номер телефона">8-800-200-00-00</a>
           </li>
         </ul>
