правки (оптимизация шрифтов, фокус на карточках)

--- a/source/index.html
+++ b/source/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Круизы в Антарктику </title>
-  <link rel="preload" href="fonts/montserrat-regular.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="fonts/montserrat-medium.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="fonts/montserrat-semibold.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="fonts/montserrat-bold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/montserrat-400.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/montserrat-500.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/montserrat-600.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/montserrat-700.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preconnect" href="https://maps.googleapis.com">
   <link rel="preconnect" href="https://maps.gstatic.com">
   <link rel="stylesheet" href="css/style.min.css">
@@ -66,7 +66,7 @@
           <source media="(max-width: 767px)" srcset="img/travel-mobile@1x.webp 1x, img/travel-mobile@2x.webp 2x" type="image/webp">
 
           <!-- 1х: 560px; 2x: 1120px -->
-          <img src="img/travel@1x.jpg" srcset="img/travel@2x.jpg 2x" width="560" height="301" alt="Фото пингвинов Антарктики">
+          <img src="img/travel@1x.jpg" srcset="img/travel@2x.jpg 2x" width="560" height="301" loading="lazy" alt="Фото пингвинов Антарктики">
         </picture>
       </div>
     </section>
